Added instructions, device and First Hello World

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
         <span class="mono" id="inspectView"></span>
     </div>
 
+    <div id="console">
+
+    </div>
+
     <script type="module" src="js/index.mjs"></script>
 </body>
 </html>
