Aded github link

--- a/index.html
+++ b/index.html
@@ -16,10 +16,16 @@
             background-color: yellow;
             color: black;
         }
+        a {
+            color: lightblue;
+        }
+        a:hover {
+            color: blue;
+        }
     </style>
 </head>
 <body>
-    <button id="step">Step</button><button id="run">Run</button>
+    <button id="step">Step</button><button id="run">Run</button>&nbsp;<a hreg="https://github.com/mobilex1122/jan-pc" href="">Fork On Github</a>
     <div id="registers" class="mono">
         <span data-reg="0" data-name="IP"></span>
         <span data-reg="1" data-name="ACC"></span>
